basic changes are impleamentd

--- a/acca_ifrs.html
+++ b/acca_ifrs.html
@@ -65,7 +65,6 @@
       <div id="spinner">
         <img alt="" src="images/preloaders/2.gif">
       </div>
-      <div id="disable-preloader" class="btn btn-default btn-sm">Disable Preloader</div>
     </div>
 
     <!-- Header -->
@@ -142,16 +141,15 @@
             <div class="container pt-200 pb-200">
               <div class="row">
                 <div class="col-md-12">
-                  <h1 class="text-white text-uppercase font-60 font-weight-700 mb-0">Learn<span
-                      class="text-theme-color-2">Press</span></h1>
-                  <h2 class="title text-white ">DIPLOMA ACCA-IFRS</h2>
-                  <p class="font-16 text-white">We provides always our best services for our clients and always<br> try
-                    to achieve our client's trust and satisfaction.</p>
-                  <a class="btn btn-colored btn-theme-colored btn-flat mt-15" href="page-booking-form.html">Book Now</a>
+                  <h1 class="text-white text-uppercase font-60 font-weight-700 mb-0">ACCA-<span
+                      class="text-theme-color-2">IFRS</span></h1>
+                  <h2 class="title text-white "> Navigate Global Finance with Expertise and Confidence!</h2>
+                  <p class="font-16 text-white">Embark on a journey to master IFRS. Gain expertise and confidence to navigate the complexities of <br> global finance successfully. Enroll now!</p>
+                  <a class="btn btn-colored btn-theme-colored btn-flat mt-15" href="contact.html">Contact Now</a>
                   <ol class="breadcrumb text-left text-black mt-10">
                     <li><a href="/">Home</a></li>
                     <li><a href="/course.html">Courses</a></li>
-                    <li class="active text-gray-silver">coursename</li>
+                    <li class="active text-gray-silver">ACCA-IFRS</li>
                   </ol>
                 </div>
               </div>
@@ -165,7 +163,7 @@
           <div class="row">
             <div class="col-md-8 blog-pull-right">
               <div class="single-service">
-                <img src="images/services/lg3.jpg" alt="">
+                <!-- <img src="images/services/lg3.jpg" alt=""> -->
                 <h3 class="text-theme-colored">DIPLOMA ACCA-IFRS</h3>
                 <h5><em><span class="text-theme-color-2">Dear Asperent , </span> <br /><span
                       class="text-theme-color-2">IFRS, embraced by over 140 nations, </span>is a global standard for
@@ -207,11 +205,11 @@
                   </div>
                 </div>
                 <div class="row text-center">
-                  <div class="heading-line-bottom mb- ">
+                  <div class="heading-line-bottom mb-6 mt-30 ">
                     <h4 class="heading-title">What will I be able to do?</h4>
                   </div>
                 </div>
-                <div class="row mt-30">
+                <div class="row ">
                   <div class="col-xs-12 col-sm-6 col-md-6">
                     <div class="icon-box iconbox-theme-colored">
                       <a class="icon icon-bordered icon-circled icon-border-effect effect-circled" href="#">
@@ -251,6 +249,44 @@
                       <p class="text-gray"> Prepare comprehensive group financial statements, encompassing subsidiaries,
                         associates, and joint arrangements, excluding group cashflow statements.</p>
                     </div>
+                  </div>
+                </div>
+                <div class="row ">
+                  <div class="col-md-12 ">
+                    <h4 class="title"> Syllabus </h4>
+                    <p>The diploma program addresses international financial reporting. It also covers first time application of international financial reporting standards. </p>
+                    <table class="table table-bordered table-striped">
+                      <colgroup>
+                        <col class="col-xs-1">
+                        <col class="col-xs-7">
+                      </colgroup>
+                      <thead>
+                        <tr>
+                          <th></th>
+                          <th>subject</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <th scope="row">•</th>
+                          <td>International sources of authority </td>
+                        </tr>
+                        <tr>
+                          <th scope="row">•</th>
+                          <td>Elements of financial statements </td>
+                        </tr>
+                        <tr>
+                          <th scope="row">•</th>
+                          <td>Presentation of financial statements and additional disclosures </td>
+                        </tr>
+                        <tr>
+                          <th scope="row">•</th>
+                          <td>Preparation of external financial reports for combined entities, associates and joint
+                            arrangements.</td>
+                        </tr>
+                      </tbody>
+                    </table>
+
                   </div>
                 </div>
               </div>
@@ -497,19 +533,19 @@
                         </p>
                       </div>
                     </div>
-                <div class="widget">
-                  <h4 class="widget-title line-bottom">Courses List</h4>
-                  <div class="services-list">
-                    <ul class="list list-border">
-                      <li class="active"><a href="cmausa.html">CMA USA</a></li>
-                      <li><a href="cmaindia.html">CMA INDIA</a></li>
-                      <li><a href="enrolledagent.html">ENROLLED AGENT</a></li>
-                      <li><a href="bat.html">BAT</a></li>
-                      <li><a href="cat.html">CAT</a></li>
-                      <li><a href="acca_ifrs.html">ACCA</a></li>
-                    </ul>
-                  </div>
-                </div>
+                    <div class="widget">
+                      <h4 class="widget-title line-bottom">Courses List</h4>
+                      <div class="services-list">
+                        <ul class="list list-border">
+                          <li class="active"><a href="cmausa.html">CMA USA</a></li>
+                          <li><a href="cmaindia.html">CMA INDIA</a></li>
+                          <li><a href="enrolledagent.html">ENROLLED AGENT</a></li>
+                          <li><a href="bat.html">BAT</a></li>
+                          <li><a href="cat.html">CAT</a></li>
+                          <li><a href="acca_ifrs.html">ACCA</a></li>
+                        </ul>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
