--- a/cmaindia.html
+++ b/cmaindia.html
@@ -65,7 +65,6 @@
       <div id="spinner">
         <img alt="" src="images/preloaders/2.gif">
       </div>
-      <div id="disable-preloader" class="btn btn-default btn-sm">Disable Preloader</div>
     </div>
 
     <!-- Header -->
@@ -143,16 +142,16 @@
             <div class="container pt-200 pb-200">
               <div class="row">
                 <div class="col-md-12">
-                  <h1 class="text-white text-uppercase font-60 font-weight-700 mb-0">Learn<span
-                      class="text-theme-color-2">Press</span></h1>
-                  <h2 class="title text-white ">DIPLOMA corce name</h2>
-                  <p class="font-16 text-white">We provides always our best services for our clients and always<br> try
-                    to achieve our client's trust and satisfaction.</p>
-                  <a class="btn btn-colored btn-theme-colored btn-flat mt-15" href="page-booking-form.html">Book Now</a>
+                  <h1 class="text-white text-uppercase font-60 font-weight-700 mb-0">CMA<span
+                      class="text-theme-color-2"> - INDIA</span></h1>
+                  <h2 class="title text-white ">_ BE A CMA, BE AN ENABLER FOR SELF-RELIANT </h2>
+                  <p class="font-16 text-white">Unlock global opportunities with CMA India at Prospire, Kerala's top
+                    coaching center. <br> Master cost and management accounting alongside B.Com for success.</p>
+                  <a class="btn btn-colored btn-theme-colored btn-flat mt-15" href="contact.html">Contact Now</a>
                   <ol class="breadcrumb text-left text-black mt-10">
                     <li><a href="/">Home</a></li>
                     <li><a href="/course.html">Courses</a></li>
-                    <li class="active text-gray-silver">coursename</li>
+                    <li class="active text-gray-silver">CMA-INDIA</li>
                   </ol>
                 </div>
               </div>
@@ -167,7 +166,7 @@
           <div class="row">
             <div class="col-md-8 blog-pull-right">
               <div class="single-service">
-                <img src="images/services/lg3.jpg" alt="">
+                <!-- <img src="images/services/lg3.jpg" alt=""> -->
                 <h3 class="text-theme-colored">CMA INDIA + B.COM</h3>
                 <h5><em><span class="text-theme-color-2">Dear Asperent , </span> <br />" Prospire offеrs thе prеstigious
                     CMA India coursе, rеcognizеd globally as thе bеnchmark for
@@ -182,32 +181,12 @@
                     dеcision-making<span class="text-theme-color-2">Pursuе CMA India alongsidе B. Com, awardеd by a
                       UGC-affiliatеd Univеrsity, for a holistic education.
                       <span> </em>"</h5>
-                <div class="row">
-                  <div class="col-md-12">
-                    <div class="row">
-                      <div class="col-xs-4 col-sm-4 col-md-4">
-                        <div class="icon-box box-border text-center mb-20 p-15">
-                          <i class="fa fa-desktop text-theme-color-2 font-36"></i>
-                          <h4>Service</h4>
-                        </div>
-                      </div>
-                      <div class="col-xs-4 col-sm-4 col-md-4">
-                        <div class="icon-box box-border text-center mb-20 p-15">
-                          <i class="fa fa-user text-theme-color-2 font-36"></i>
-                          <h4 class="">Practice</h4>
-                        </div>
-                      </div>
-                      <div class="col-xs-4 col-sm-4 col-md-4">
-                        <div class="icon-box box-border text-center mb-20 p-15">
-                          <i class="fa fa-money text-theme-color-2 font-36"></i>
-                          <h4 class="">Start-up</h4>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
                 <br><br><br>
                 <img class="container" src="images/mainimages/cma_india_duration_map.png" alt="">
+                <br><br><br>
+                <h3 class="text-theme-colored">SYLLABUS</h3>
+                <br><br>
+                <img class="container" src="images/mainimages/cma_india_stages.png" alt="">
               </div>
             </div>
             <div class="col-sm-12 col-md-4">
@@ -297,6 +276,18 @@
                         </div>
                       </div>
                     </div>
+                  </div>
+                </div>
+                <div class="widget">
+                  <h5 class="widget-title line-bottom">Job Roles CMA's</h5>
+                  <div class="tags">
+                    <a>CMD</a>
+                    <a>Director & President -Finance</a>
+                    <a>CEO</a>
+                    <a>COO</a>
+                    <a>CFO</a>
+                    <a>Cost Auditor&Adviser</a>
+                    <a>GST Auditer</a>
                   </div>
                 </div>
                 <div class="widget">
@@ -456,15 +447,16 @@
                   <h4 class="widget-title line-bottom">Courses List</h4>
                   <div class="services-list">
                     <ul class="list list-border">
-                      <li class="active"><a href="cmausa.html">CMA USA</a></li>
-                      <li><a href="cmaindia.html">CMA INDIA</a></li>
+                      <li><a href="cmausa.html">CMA USA</a></li>
+                      <li  class="active"><a href="cmaindia.html">CMA INDIA</a></li>
                       <li><a href="enrolledagent.html">ENROLLED AGENT</a></li>
                       <li><a href="bat.html">BAT</a></li>
                       <li><a href="cat.html">CAT</a></li>
                       <li><a href="acca_ifrs.html">ACCA</a></li>
                     </ul>
                   </div>
-                </div>              </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
