--- a/cmausa.html
+++ b/cmausa.html
@@ -65,7 +65,6 @@
       <div id="spinner">
         <img alt="" src="images/preloaders/2.gif">
       </div>
-      <div id="disable-preloader" class="btn btn-default btn-sm">Disable Preloader</div>
     </div>
 
     <!-- Header -->
@@ -85,10 +84,10 @@
                 <li>
                   <a href="/">Home</a>
                 </li>
-                <li>
+                <li class="active">
                   <a href="course.html">Courses</a>
                   <ul class="dropdown">
-                    <li class="active">
+                    <li>
                       <a href="cmausa.html">CMA USA</a>
                     </li>
                     <li>
@@ -108,7 +107,6 @@
                     </li>
                   </ul>
                 </li>
-
                 <li>
                   <a href="about.html">About</a>
                 </li>
@@ -144,16 +142,18 @@
             <div class="container pt-200 pb-200">
               <div class="row">
                 <div class="col-md-12">
-                  <h1 class="text-white text-uppercase font-60 font-weight-700 mb-0">Learn<span
-                      class="text-theme-color-2">Press</span></h1>
-                  <h2 class="title text-white ">DIPLOMA corce name</h2>
-                  <p class="font-16 text-white">We provides always our best services for our clients and always<br> try
-                    to achieve our client's trust and satisfaction.</p>
-                  <a class="btn btn-colored btn-theme-colored btn-flat mt-15" href="page-booking-form.html">Book Now</a>
+                  <h1 class="text-white text-uppercase font-60 font-weight-700 mb-0"> CMA <span
+                      class="text-theme-color-2">- USA </span></h1>
+                  <!-- <h2 class="title text-white ">Smart decisions start here !</h2> -->
+                  <h2 class="title text-white ">Your CMA journey right here!</h2>
+                  <p class="font-16 text-white">Institute of Management Accountant is the world-wide association <br />
+                    of
+                    accounting and finance professionals in business, Founded over 100 years ago</p>
+                  <a class="btn btn-colored btn-theme-colored btn-flat mt-15" href="contact.html">Contact Now</a>
                   <ol class="breadcrumb text-left text-black mt-10">
                     <li><a href="/">Home</a></li>
                     <li><a href="/course.html">Courses</a></li>
-                    <li class="active text-gray-silver">coursename</li>
+                    <li class="active text-gray-silver">CMA-US</li>
                   </ol>
                 </div>
               </div>
@@ -168,7 +168,6 @@
           <div class="row">
             <div class="col-md-8 blog-pull-right">
               <div class="single-service">
-                <img src="images/services/lg3.jpg" alt="">
                 <h3 class="text-theme-colored">CMA USA</h3>
                 <h5><em><span class="text-theme-color-2">Dear Aspirant,</span> <br />Certified Management Accountants
                     (CMA) designation, a prestigious qualification conferred by the Institute of Management Accountants
@@ -184,17 +183,20 @@
                   positioning yoursеlf for succеss in divеrsе global opportunities. With a wеll-rеgardеd rеputation, CMA
                   USA cеrtification sеts you apart in thе compеtitivе job markеt, еspеcially in Kеrala and major Indian
                   cities, offering high-profile rolеs in managеmеnt and financial accounting."</p>
-                <br /><br /><br />
+                <br /><br />
                 <img src="images/mainimages/CMA_USA_TREE.jpg" alt="">
                 <br /><br /><br />
                 <img src="images/mainimages/CMA_USA_EXAM_SCEDULE.png" alt="">
-                <br /><br /><br />
+                <br /><br />
                 <img src="images/mainimages/CMA_pappers.png" alt="">
+                <br /> <br> <br>
+                <img src="images/mainimages/CMA_USA_INDUSTRIES.png" alt="">
                 <br /><br /><br />
                 <h2 class="title text-center">Why Prospire</h2>
                 <br />
                 <img src="images/mainimages/Why_Prospire.png" alt="">
-
+                <br />
+                <img src="images/mainimages/CMA-USA-CAREEROPPERTUN.jpg" alt="">
               </div>
             </div>
             <div class="col-sm-12 col-md-4">
@@ -230,9 +232,12 @@
                     <div id="chartContainer" style="height: 370px; width: 100%;"></div>
                   </div>
                 </div>
-
-
                 <div class="widget">
+                  <h3 class="text-theme-colored">PLACEMENT COMPANIES:-</h3>
+                  <img src="images/mainimages/CMA_USA_PLACEMENT_COMPANIES.png" alt="">
+                </div>
+                <div class="widget">
+                  <h3 class="text-theme-colored"> TESTIMONIALS :-</h3>
                   <div class="mt-30 p-30" style="border: 10px solid #f1f1f1;">
                     <h5 class="text-theme-colored title-border mb-20">student's Feedback</h5>
                     <div class="testimonial-carousel-info owl-nav-top">
@@ -324,8 +329,7 @@
                       <div class="panel-title">
                         <a data-parent="#accordion1" data-toggle="collapse" href="#accordion13" class=""
                           aria-expanded="true">
-                          <span class="open-sub"></span>What is the eligibility criteria to attain the CMA
-                          certification?</a>
+                          <span class="open-sub"></span>CMA certification eligibility criteria?</a>
                       </div>
                       <div id="accordion13" class="panel-collapse collapse" role="tablist" aria-expanded="true">
                         <div class="panel-content">
@@ -396,37 +400,6 @@
                         </div>
                       </div>
                     </div>
-                    <div class="panel">
-                      <div class="panel-title">
-                        <a data-parent="#accordion1" data-toggle="collapse" href="#accordion18" class=""
-                          aria-expanded="true">
-                          <span class="open-sub"></span>What job opportunities are available for CMA USA graduates?</a>
-                      </div>
-                      <div id="accordion18" class="panel-collapse collapse" role="tablist" aria-expanded="true">
-                        <div class="panel-content">
-                          <p>
-                            Upon completion, a wide range of job roles awaits graduates, including Financial Analyst,
-                            Financial Controller, Finance Manager, and more
-                          </p>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="panel">
-                      <div class="panel-title">
-                        <a data-parent="#accordion1" data-toggle="collapse" href="#accordion19" class=""
-                          aria-expanded="true">
-                          <span class="open-sub"></span>What's the CMA exam pass rate, and how should I prepare
-                          effectively?</a>
-                      </div>
-                      <div id="accordion19" class="panel-collapse collapse" role="tablist" aria-expanded="true">
-                        <div class="panel-content">
-                          <p>
-                            The CMA exam boasts a 40%+ pass rate. Effective preparation entails dedicating around 400
-                            hours, utilizing review courses, practice exams, and joining a CMA review program.
-                          </p>
-                        </div>
-                      </div>
-                    </div>
                   </div>
                 </div>
                 <!-- <div class="widget">
@@ -468,20 +441,22 @@
                     </ul>
                   </div>
                 </div>
-                <!-- <div class="widget">
-                  <h4 class="widget-title line-bottom">Photos from Flickr</h4>
-                  <div id="flickr-feed" class="clearfix">
-                    <script type="text/javascript"
-                      src="https://www.flipkart.com/linear-differential-operators-constant-coefficients/p/itmdf4speftayrgy?pid=9783642462214&lid=LSTBOK9783642462214AGKIO6&marketplace=FLIPKART&q=constant+force+spring&store=search.flipkart.com&srno=s_3_81&otracker=search&otracker1=search&iid=9794693f-2124-4386-801f-e171ecce72c7.9783642462214.SEARCH&ssid=0717jivg3k0000001699680472187&qH=76bcc75d3b61fc89">
-                      </script>
-                  </div>
-                </div> -->
-
               </div>
             </div>
           </div>
         </div>
       </section>
+      <section class="divider parallax layer-overlay text-center" data-bg-img="images/bg/bg4.jpg">
+        <div class="container pt-120 pb-120">
+          <div class="row">
+            <div class="col-md-12 text-center">
+              <h3 class="text-white">Background Image With Parallax Divider</h3>
+              <h5 class="text-white">Content Here...</h5>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- <h3 class="text-theme-colored">PLACEMENT COMPANIES:-</h3> -->
     </div>
     <!-- end main-content -->
 
