--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,6 @@
       <div id="spinner">
         <img alt="" src="images/preloaders/2.gif">
       </div>
-      <div id="disable-preloader" class="btn btn-default btn-sm">Disable Preloader</div>
     </div>
 
     <!-- Header -->
@@ -104,16 +103,16 @@
                       <a href="cmaindia.html">CMA INDIA</a>
                     </li>
                     <li>
-                      <a href="404.html">EA (Enrolled Agent)</a>
+                      <a href="enrolledagent.html">EA (Enrolled Agent)</a>
                     </li>
                     <li>
-                      <a href="404.html">BAT</a>
+                      <a href="bat.html">BAT</a>
                     </li>
                     <li>
-                      <a href="404.html">CAT</a>
+                      <a href="cat.html">CAT</a>
                     </li>
                     <li>
-                      <a href="404.html">ACCA IFRS</a>
+                      <a href="acca_ifrs.html">ACCA IFRS</a>
                     </li>
                   </ul>
                 </li>
@@ -122,19 +121,11 @@
                   <a href="about.html">About</a>
                 </li>
                 <li>
-                  <a href="404.html">career</a>
-                </li>
-                <li>
                   <a href="gallery.html">Gallery</a>
                 </li>
                 <li>
-                  <a href="blog.html">blog</a>
-                </li>
-
-                <li>
                   <a href="contact.html" class="btn btn-gray btn-transparent btn-theme-colored">Contact <i
                       class="fa fa-arrow-circle-right"></i></a>
-
                 </li>
               </ul>
 
