--- a/enrolledagent.html
+++ b/enrolledagent.html
@@ -65,7 +65,6 @@
       <div id="spinner">
         <img alt="" src="images/preloaders/2.gif">
       </div>
-      <div id="disable-preloader" class="btn btn-default btn-sm">Disable Preloader</div>
     </div>
 
     <!-- Header -->
@@ -143,16 +142,17 @@
             <div class="container pt-200 pb-200">
               <div class="row">
                 <div class="col-md-12">
-                  <h1 class="text-white text-uppercase font-60 font-weight-700 mb-0">Learn<span
-                      class="text-theme-color-2">Press</span></h1>
-                  <h2 class="title text-white ">DIPLOMA corce name</h2>
-                  <p class="font-16 text-white">We provides always our best services for our clients and always<br> try
-                    to achieve our client's trust and satisfaction.</p>
-                  <a class="btn btn-colored btn-theme-colored btn-flat mt-15" href="page-booking-form.html">Book Now</a>
+                  <h1 class="text-white text-uppercase font-60 font-weight-700 mb-0">ENROLLED<span
+                      class="text-theme-color-2">AGENT</span></h1>
+                  <h2 class="title text-white ">_The Destination for Future Tax Professionals</h2>
+                  <p class="font-16 text-white">An Enrolled Agent (EA) represents US taxpayers before the Internal
+                    Revenue Service (IRS) <br> which is the
+                    U.S. federal agency that oversees the collection of taxes and <br> enforcement of tax laws.</p>
+                  <a class="btn btn-colored btn-theme-colored btn-flat mt-15" href="contact.html">Contact Now</a>
                   <ol class="breadcrumb text-left text-black mt-10">
                     <li><a href="/">Home</a></li>
                     <li><a href="/course.html">Courses</a></li>
-                    <li class="active text-gray-silver">coursename</li>
+                    <li class="active text-gray-silver">ENTROLLED AGENT</li>
                   </ol>
                 </div>
               </div>
@@ -185,34 +185,17 @@
                     and ever-evolving field of taxation. <span class="text-theme-color-2">Join us on the journey to
                       becoming a future tax professional, where excellence meets opportunity.
                       <span> </em>"</h5>
+                        <br/><br/><br/><br/>
                 <img src="images/mainimages/EA_TREE.jpg" alt="">
-
+                <br/><br/><br/>
                 <div class="row">
                   <div class="col-md-12">
                     <h3 class="text-theme-colored">Features of the course </h3>
+                    <br/><br/>
                     <img src="images/mainimages/EA_flow_chart.png" alt="">
-                    <br>
-                    <div class="row">
-                      <div class="col-xs-4 col-sm-4 col-md-4">
-                        <div class="icon-box box-border text-center mb-20 p-15">
-                          <i class="fa fa-desktop text-theme-color-2 font-36"></i>
-                          <h4>Best Lab</h4>
-                        </div>
-                      </div>
-                      <div class="col-xs-4 col-sm-4 col-md-4">
-                        <div class="icon-box box-border text-center mb-20 p-15">
-                          <i class="fa fa-user text-theme-color-2 font-36"></i>
-                          <h4 class="">Best Teachers</h4>
-                        </div>
-                      </div>
-                      <div class="col-xs-4 col-sm-4 col-md-4">
-                        <div class="icon-box box-border text-center mb-20 p-15">
-                          <i class="fa fa-money text-theme-color-2 font-36"></i>
-                          <h4 class="">Low Cost Services</h4>
-                        </div>
-                      </div>
-                    </div>
+                    <br><br/><br/>
                     <img src="images/mainimages/EA_StageExplaining.png" alt="">
+                    <br><br><br>
                   </div>
                 </div>
               </div>
@@ -445,24 +428,20 @@
                   </div>
                 </div>
                 <div class="widget">
+                  <h3 class="text-theme-colored">PLACEMENT COMPANIES:-</h3>
+                  <img src="images/mainimages/CMA_USA_PLACEMENT_COMPANIES.png" alt="">
+                </div>
+                <div class="widget">
                   <h4 class="widget-title line-bottom">Courses List</h4>
                   <div class="services-list">
                     <ul class="list list-border">
-                      <li class="active"><a href="cmausa.html">CMA USA</a></li>
+                      <li><a href="cmausa.html">CMA USA</a></li>
                       <li><a href="cmaindia.html">CMA INDIA</a></li>
-                      <li><a href="enrolledagent.html">ENROLLED AGENT</a></li>
+                      <li class="active"><a href="enrolledagent.html">ENROLLED AGENT</a></li>
                       <li><a href="bat.html">BAT</a></li>
                       <li><a href="cat.html">CAT</a></li>
                       <li><a href="acca_ifrs.html">ACCA</a></li>
                     </ul>
-                  </div>
-                </div>
-
-                <div class="widget">
-                  <h4 class="widget-title line-bottom">Photos from Flickr</h4>
-                  <div>
-                    <img src="images/mainimages/cmaindia_placement.png" alt="">
-
                   </div>
                 </div>
               </div>
