--- a/cat.html
+++ b/cat.html
@@ -65,7 +65,6 @@
       <div id="spinner">
         <img alt="" src="images/preloaders/2.gif">
       </div>
-      <div id="disable-preloader" class="btn btn-default btn-sm">Disable Preloader</div>
     </div>
 
     <!-- Header -->
@@ -143,12 +142,13 @@
             <div class="container pt-200 pb-200">
               <div class="row">
                 <div class="col-md-12">
-                  <h1 class="text-white text-uppercase font-60 font-weight-700 mb-0">Learn<span
-                      class="text-theme-color-2">Press</span></h1>
-                  <h2 class="title text-white ">DIPLOMA corce name</h2>
-                  <p class="font-16 text-white">We provides always our best services for our clients and always<br> try
-                    to achieve our client's trust and satisfaction.</p>
-                  <a class="btn btn-colored btn-theme-colored btn-flat mt-15" href="page-booking-form.html">Book Now</a>
+                  <h1 class="text-white text-uppercase font-60 font-weight-700 mb-0">CERTIFICATE IN <span
+                      class="text-theme-color-2">ACCOUNTING </span>TECHNICIAN</h1>
+                  <h2 class="title text-white ">Your Gateway to Financial Expertise and Career Triumphs</h2>
+                  <p class="font-16 text-white">Seize CAT now! Elevate your career with essential financial expertise.
+                    <br> Unleash potential, unlock success. Enroll today!
+                  </p>
+                  <a class="btn btn-colored btn-theme-colored btn-flat mt-15" href="contact.html">Contact Now</a>
                   <ol class="breadcrumb text-left text-black mt-10">
                     <li><a href="/">Home</a></li>
                     <li><a href="/course.html">Courses</a></li>
@@ -166,8 +166,8 @@
         <div class="container mt-30 mb-0 pt-30 pb-30">
           <div class="row">
             <div class="col-md-8 blog-pull-right">
+              <img src="images/services/lg3.jpg" alt="">
               <div class="single-service">
-                <img src="images/services/lg3.jpg" alt="">
                 <h3 class="text-theme-colored">CERTIFICATE IN ACCOUNTING TECHNICIAN</h3>
                 <h5><em><span class="text-theme-color-2">Dear Asperent , </span> <br />"
                     Manmohan Singh introduced the Certificate in Accounting Technicians (CAT) <span
@@ -254,7 +254,7 @@
                         </colgroup>
                         <thead>
                           <tr>
-                            <th>order</th>
+                            <th></th>
                             <th>Description</th>
                           </tr>
                         </thead>
@@ -321,7 +321,8 @@
                     <div class="testimonial-carousel-info owl-nav-top">
                       <div class="item">
                         <div class="comment">
-                          <p>feedback</p>
+                          <p>"Incredible CAT journey at Prospire! Foundation to Competency Levels, job-ready skills.
+                            Seamless entry to CMA Intermediate. Top-notch accounting education!"</p>
                         </div>
                         <div class="content mt-20">
                           <div class="thumb pull-right">
@@ -335,7 +336,8 @@
                       </div>
                       <div class="item">
                         <div class="comment">
-                          <p>feedback</p>
+                          <p>"Prospire's CAT course: Tailored for success! Practical skills, comprehensive training, and
+                            eligibility for CMA Intermediate. A game-changer in accounting education."</p>
                         </div>
                         <div class="content mt-20">
                           <div class="thumb pull-right">
@@ -349,7 +351,8 @@
                       </div>
                       <div class="item">
                         <div class="comment">
-                          <p>feedback</p>
+                          <p>"CAT at Prospire, a gateway to financial expertise. Enhanced employability, seamless
+                            progression to professional courses. Highly recommended for aspiring accountants."</p>
                         </div>
                         <div class="content mt-20">
                           <div class="thumb pull-right">
@@ -373,12 +376,12 @@
                       <div class="panel-title">
                         <a class="active" data-parent="#accordion1" data-toggle="collapse" href="#accordion11"
                           aria-expanded="true">
-                          <span class="open-sub"></span> questions? answers</a>
+                          <span class="open-sub"></span> What is CAT certification?</a>
                       </div>
                       <div id="accordion11" class="panel-collapse collapse in" role="tablist" aria-expanded="true">
                         <div class="panel-content">
                           <p>
-                            answers </p>
+                            CAT is the Certificate in Accounting Technicians, a short-term program by ICAI. </p>
                         </div>
                       </div>
                     </div>
@@ -386,12 +389,13 @@
                       <div class="panel-title">
                         <a data-parent="#accordion1" data-toggle="collapse" href="#accordion12" class=""
                           aria-expanded="true">
-                          <span class="open-sub"></span>questions? </a>
+                          <span class="open-sub"></span>Who can enroll in CAT?</a>
                       </div>
                       <div id="accordion12" class="panel-collapse collapse" role="tablist" aria-expanded="true">
                         <div class="panel-content">
                           <p>
-                            answers </p>
+                            Eligibility is 12th any stream appearing/passed students, offering comprehensive financial
+                            skills training. </p>
                         </div>
                       </div>
                     </div>
@@ -399,12 +403,12 @@
                       <div class="panel-title">
                         <a data-parent="#accordion1" data-toggle="collapse" href="#accordion13" class=""
                           aria-expanded="true">
-                          <span class="open-sub"></span>questions? </a>
+                          <span class="open-sub"></span>How long is the CAT course? </a>
                       </div>
                       <div id="accordion13" class="panel-collapse collapse" role="tablist" aria-expanded="true">
                         <div class="panel-content">
                           <p>
-                            answers </p>
+                            CAT has a duration of 6 months, preparing students for entry-level accounting roles. </p>
                         </div>
                       </div>
                     </div>
@@ -412,12 +416,12 @@
                       <div class="panel-title">
                         <a data-parent="#accordion1" data-toggle="collapse" href="#accordion14" class=""
                           aria-expanded="true">
-                          <span class="open-sub"></span>questions? </a>
+                          <span class="open-sub"></span>When are CAT exams held?</a>
                       </div>
                       <div id="accordion14" class="panel-collapse collapse" role="tablist" aria-expanded="true">
                         <div class="panel-content">
                           <p>
-                            answers
+                            CAT exams are in June and December, featuring multiple-choice questions for assessment.
                           </p>
                         </div>
                       </div>
@@ -426,12 +430,13 @@
                       <div class="panel-title">
                         <a data-parent="#accordion1" data-toggle="collapse" href="#accordion15" class=""
                           aria-expanded="true">
-                          <span class="open-sub"></span>questions? </a>
+                          <span class="open-sub"></span>What topics does CAT cover? </a>
                       </div>
                       <div id="accordion15" class="panel-collapse collapse" role="tablist" aria-expanded="true">
                         <div class="panel-content">
                           <p>
-                            answers </p>
+                            CAT covers financial accounting, laws, GST, computers, costing principles, and statutory
+                            returns. </p>
                         </div>
                       </div>
                     </div>
@@ -439,12 +444,13 @@
                       <div class="panel-title">
                         <a data-parent="#accordion1" data-toggle="collapse" href="#accordion16" class=""
                           aria-expanded="true">
-                          <span class="open-sub"></span>questions? </a>
+                          <span class="open-sub"></span>Can I pursue CAT simultaneously?</a>
                       </div>
                       <div id="accordion16" class="panel-collapse collapse" role="tablist" aria-expanded="true">
                         <div class="panel-content">
                           <p>
-                            answers </p>
+                            Yes, CAT can be pursued alongside higher secondary studies, enhancing employability skills.
+                          </p>
                         </div>
                       </div>
                     </div>
@@ -452,12 +458,12 @@
                       <div class="panel-title">
                         <a data-parent="#accordion1" data-toggle="collapse" href="#accordion17" class=""
                           aria-expanded="true">
-                          <span class="open-sub"></span>questions? </a>
+                          <span class="open-sub"></span>Are there job opportunities after CAT?</a>
                       </div>
                       <div id="accordion17" class="panel-collapse collapse" role="tablist" aria-expanded="true">
                         <div class="panel-content">
                           <p>
-                            answers </p>
+                            CAT graduates find roles in SMEs, BPOs, tax preparation, retail, and logistics. </p>
                         </div>
                       </div>
                     </div>
@@ -465,12 +471,12 @@
                       <div class="panel-title">
                         <a data-parent="#accordion1" data-toggle="collapse" href="#accordion18" class=""
                           aria-expanded="true">
-                          <span class="open-sub"></span>questions? </a>
+                          <span class="open-sub"></span>What is the passing standard?</a>
                       </div>
                       <div id="accordion18" class="panel-collapse collapse" role="tablist" aria-expanded="true">
                         <div class="panel-content">
                           <p>
-                            answers </p>
+                            To pass, secure 40% in each paper and an aggregate of 50% in the Foundation Exam. </p>
                         </div>
                       </div>
                     </div>
@@ -478,12 +484,26 @@
                       <div class="panel-title">
                         <a data-parent="#accordion1" data-toggle="collapse" href="#accordion19" class=""
                           aria-expanded="true">
-                          <span class="open-sub"></span>questions? </a>
+                          <span class="open-sub"></span>Can I join CMA Intermediate?</a>
                       </div>
                       <div id="accordion19" class="panel-collapse collapse" role="tablist" aria-expanded="true">
                         <div class="panel-content">
                           <p>
-                            answers </p>
+                            Yes, eligibility for CMA Intermediate is available after completing CAT Level-1
+                            successfully. </p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="panel">
+                      <div class="panel-title">
+                        <a data-parent="#accordion1" data-toggle="collapse" href="#accordion20" class=""
+                          aria-expanded="true">
+                          <span class="open-sub"></span> What are the career prospects?</a>
+                      </div>
+                      <div id="accordion20" class="panel-collapse collapse" role="tablist" aria-expanded="true">
+                        <div class="panel-content">
+                          <p>
+                            CAT opens opportunities in accounting functions, SMEs, BPOs, tax preparation, and more</p>
                         </div>
                       </div>
                     </div>
@@ -493,15 +513,16 @@
                   <h4 class="widget-title line-bottom">Courses List</h4>
                   <div class="services-list">
                     <ul class="list list-border">
-                      <li class="active"><a href="cmausa.html">CMA USA</a></li>
+                      <li><a href="cmausa.html">CMA USA</a></li>
                       <li><a href="cmaindia.html">CMA INDIA</a></li>
                       <li><a href="enrolledagent.html">ENROLLED AGENT</a></li>
                       <li><a href="bat.html">BAT</a></li>
-                      <li><a href="cat.html">CAT</a></li>
+                      <li class="active"><a href="cat.html">CAT</a></li>
                       <li><a href="acca_ifrs.html">ACCA</a></li>
                     </ul>
                   </div>
-                </div>              </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
