--- a/gallery.html
+++ b/gallery.html
@@ -74,33 +74,12 @@
       <div id="spinner">
         <img alt="" src="images/preloaders/2.gif">
       </div>
-      <div id="disable-preloader" class="btn btn-default btn-sm">Disable Preloader</div>
     </div>
 
     <!-- Header -->
     <header id="header" class="header">
       <div class="header-top bg-theme-color-2 sm-text-center">
         <div class="container">
-          <div class="row">
-            <div class="col-md-11">
-              <div class="widget no-border m-0">
-                <ul class="list-inline">
-                  <li class="m-0 pl-10 pr-10">
-                    <i class="fa fa-phone text-white"></i>
-                    <a class="text-white" href="#">+91 9056666275</a>
-                  </li>
-                  <li class="m-0 pl-10 pr-10">
-                    <i class="fa fa-map-marker text-white"></i>
-                    <a class="text-white" href="#">Near Nandilath G Mart, Thavakkara Road, Caltex, Kannur</a>
-                  </li>
-                  <li class="m-0 pl-10 pr-10">
-                    <i class="fa fa-envelope-o text-white"></i>
-                    <a class="text-white" href="#">educationprospire@gmail.com</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
       <div class="header-nav">
@@ -124,16 +103,16 @@
                       <a href="cmaindia.html">CMA INDIA</a>
                     </li>
                     <li>
-                      <a href="404.html">EA (Enrolled Agent)</a>
+                      <a href="enrolledagent.html">EA (Enrolled Agent)</a>
                     </li>
                     <li>
-                      <a href="404.html">BAT</a>
+                      <a href="bat.html">BAT</a>
                     </li>
                     <li>
-                      <a href="404.html">CAT</a>
+                      <a href="cat.html">CAT</a>
                     </li>
                     <li>
-                      <a href="404.html">ACCA IFRS</a>
+                      <a href="acca_ifrs.html">ACCA IFRS</a>
                     </li>
                   </ul>
                 </li>
@@ -141,22 +120,14 @@
                 <li>
                   <a href="about.html">About</a>
                 </li>
-                <li>
-                  <a href="404.html">career</a>
-                </li>
                 <li class="active">
                   <a href="gallery.html">Gallery</a>
                 </li>
                 <li>
-                  <a href="blog.html">blog</a>
-                </li>
-                <li>
                   <a href="contact.html" class="btn btn-gray btn-transparent btn-theme-colored">Contact <i
                       class="fa fa-arrow-circle-right"></i></a>
-
                 </li>
               </ul>
-
             </nav>
           </div>
         </div>
