hero images,contensts changed

--- a/acca_ifrs.html
+++ b/acca_ifrs.html
@@ -129,7 +129,7 @@
       <section id="home" class="divider parallax" data-bg-img="images/bg/bg1.jpg">
         <div class="maximage-slider">
           <div id="maximage">
-            <img src="images/bg/bg7.jpg" alt="" />
+            <img src="images/mainimages/cources_page_2.jpg" alt="" />
             <!-- <img src="images/bg/bg5.jpg" alt="" />
             <img src="images/bg/bg1.jpg" alt="" /> -->
           </div>
