--- a/cmaindia.html
+++ b/cmaindia.html
@@ -131,7 +131,7 @@
         <div class="maximage-slider">
           <div id="maximage">
             <!-- <img src="images/bg/bg7.jpg" alt="" /> -->
-            <img src="images/bg/bg5.jpg" alt="" />
+            <img src="images/mainimages/cources_page_3.jpg" alt="" />
             <!-- <img src="images/bg/bg1.jpg" alt="" /> -->
           </div>
           <div class="fullscreen-controls"> <a class="img-prev"><i class="pe-7s-angle-left"></i></a> <a
@@ -142,8 +142,8 @@
             <div class="container pt-200 pb-200">
               <div class="row">
                 <div class="col-md-12">
-                  <h1 class="text-white text-uppercase font-60 font-weight-700 mb-0">CMA<span
-                      class="text-theme-color-2"> - INDIA</span></h1>
+                  <h1 class="text-white text-uppercase font-60 font-weight-700 mb-0">CMA-<span
+                      class="text-theme-color-2">INDIA</span></h1>
                   <h2 class="title text-white ">_ BE A CMA, BE AN ENABLER FOR SELF-RELIANT </h2>
                   <p class="font-16 text-white">Unlock global opportunities with CMA India at Prospire, Kerala's top
                     coaching center. <br> Master cost and management accounting alongside B.Com for success.</p>
@@ -448,7 +448,7 @@
                   <div class="services-list">
                     <ul class="list list-border">
                       <li><a href="cmausa.html">CMA USA</a></li>
-                      <li  class="active"><a href="cmaindia.html">CMA INDIA</a></li>
+                      <li class="active"><a href="cmaindia.html">CMA INDIA</a></li>
                       <li><a href="enrolledagent.html">ENROLLED AGENT</a></li>
                       <li><a href="bat.html">BAT</a></li>
                       <li><a href="cat.html">CAT</a></li>
