--- a/contact.html
+++ b/contact.html
@@ -202,7 +202,6 @@
           <div class="row pt-30">
             <div class="col-md-7">
               <h3 class="line-bottom mt-0 mb-30">Reach Out: Contact Us for Assistance</h3>
-
               <form id="contact_form" name="contact_form" class="" action="#" method="post">
                 <div class="row">
                   <div class="col-sm-6">
@@ -279,6 +278,9 @@
                 });
               </script>
 
+            </div>
+            <div class="col-md-5">
+              <img src="images/about/6.png" alt="">
             </div>
             <!-- <div class="col-md-5">
 
