--- a/enrolledagent.html
+++ b/enrolledagent.html
@@ -131,7 +131,7 @@
         <div class="maximage-slider">
           <div id="maximage">
             <!-- <img src="images/bg/bg7.jpg" alt="" /> -->
-            <img src="images/bg/bg5.jpg" alt="" />
+            <img src="images/mainimages/cources_page_2.jpg" alt="" />
             <!-- <img src="images/bg/bg1.jpg" alt="" /> -->
           </div>
           <div class="fullscreen-controls"> <a class="img-prev"><i class="pe-7s-angle-left"></i></a> <a
