--- a/Course.html
+++ b/Course.html
@@ -116,13 +116,7 @@
                   <a href="about.html">About</a>
                 </li>
                 <li>
-                  <a href="404.html">career</a>
-                </li>
-                <li>
                   <a href="gallery.html">Gallery</a>
-                </li>
-                <li>
-                  <a href="blog.html">blog</a>
                 </li>
                 <li>
                   <a href="contact.html" class="btn btn-gray btn-transparent btn-theme-colored">Contact <i
@@ -164,7 +158,7 @@
               <div class="col-sm-6 col-md-4 col-lg-4">
                 <div class="schedule-box maxwidth500 bg-light mb-30">
                   <div class="thumb">
-                    <img class="img-fullwidth" alt="" src="images/mainimages/graduatestudent.jpg">
+                    <img class="img-fullwidth" alt="" src="images/mainimages/cources_image_4.jpg">
                     <div class="overlay">
                       <a href="#"><i class="fa fa-calendar mr-5"></i></a>
                     </div>
@@ -190,7 +184,7 @@
               <div class="col-sm-6 col-md-4 col-lg-4">
                 <div class="schedule-box maxwidth500 bg-light mb-30">
                   <div class="thumb">
-                    <img class="img-fullwidth" alt="" src="images/mainimages/graduatestudent.jpg">
+                    <img class="img-fullwidth" alt="" src="images/mainimages/cources_image_3.avif">
                     <div class="overlay">
                       <a href="#"><i class="fa fa-calendar mr-5"></i></a>
                     </div>
@@ -217,7 +211,7 @@
               <div class="col-sm-6 col-md-4 col-lg-4">
                 <div class="schedule-box maxwidth500 bg-light mb-30">
                   <div class="thumb">
-                    <img class="img-fullwidth" alt="" src="images/mainimages/graduatestudent.jpg">
+                    <img class="img-fullwidth" alt="" src="images/mainimages/cources_image_6.jpg">
                     <div class="overlay">
                       <a href="#"><i class="fa fa-calendar mr-5"></i></a>
                     </div>
@@ -244,7 +238,7 @@
               <div class="col-sm-6 col-md-4 col-lg-4">
                 <div class="schedule-box maxwidth500 bg-light mb-30">
                   <div class="thumb">
-                    <img class="img-fullwidth" alt="" src="images/mainimages/graduatestudent.jpg">
+                    <img class="img-fullwidth" alt="" src="images/mainimages/cources_image_1.jpg">
                     <div class="overlay">
                       <a href="#"><i class="fa fa-calendar mr-5"></i></a>
                     </div>
@@ -271,7 +265,7 @@
               <div class="col-sm-6 col-md-4 col-lg-4">
                 <div class="schedule-box maxwidth500 bg-light mb-30">
                   <div class="thumb">
-                    <img class="img-fullwidth" alt="" src="images/mainimages/graduatestudent.jpg">
+                    <img class="img-fullwidth" alt="" src="images/mainimages/cources_image_5.jpg">
                     <div class="overlay">
                       <a href="#"><i class="fa fa-calendar mr-5"></i></a>
                     </div>
@@ -298,7 +292,7 @@
               <div class="col-sm-6 col-md-4 col-lg-4">
                 <div class="schedule-box maxwidth500 bg-light mb-30">
                   <div class="thumb">
-                    <img class="img-fullwidth" alt="" src="images/mainimages/graduatestudent.jpg">
+                    <img class="img-fullwidth" alt="" src="images/mainimages/cources_image_2.jpg">
                     <div class="overlay">
                       <a href="#"><i class="fa fa-calendar mr-5"></i></a>
                     </div>
