--- a/about.html
+++ b/about.html
@@ -175,7 +175,7 @@
                 <div class="video-popup">
                   <a href="https://www.youtube.com/watch?v=pW1uVUg5wXM" data-lightbox-gallery="youtube-video"
                     title="Video">
-                    <img alt="" src="images/about/5.jpg"
+                    <img alt="" src="images/mainimages/about_image_home.jpg"
                       class="img-responsive img-fullwidth mt-10 ml-30 ml-xs-0 ml-sm-0">
                   </a>
                 </div>
@@ -184,7 +184,6 @@
           </div>
         </div>
       </section>
-
       <!-- Section: Why Choose Us -->
       <section class="bg-lightest">
         <div class="container pt-50 pb-50">
@@ -418,105 +417,6 @@
           </div>
         </div>
       </section>
-
-      <!-- Divider: Reservation Form -->
-      <section>
-        <div class="container pt-0 pb-0">
-          <div class="row">
-            <div class="col-md-7">
-              <div class="p-40 pl-0">
-                <!-- Reservation Form Start-->
-                <form id="reservation_form" name="reservation_form" class="reservation-form" method="post" action="#">
-                  <h3 class="mt-0 line-bottom mb-40"><span class="text-theme-color-2">Register Now !</span>to Tap into
-                    Expert Guidance!
-                  </h3>
-                  <div class="row">
-                    <div class="col-sm-12">
-                      <div class="form-group mb-30">
-                        <input placeholder="Enter Name" type="text" id="reservation_name" name="reservation_name"
-                          required="" class="form-control">
-                      </div>
-                    </div>
-                    <div class="col-sm-12">
-                      <div class="form-group mb-30">
-                        <input placeholder="Email" type="text" id="reservation_email" name="reservation_email"
-                          class="form-control" required="">
-                      </div>
-                    </div>
-                    <div class="col-sm-6">
-                      <div class="form-group mb-30">
-                        <input placeholder="Phone" type="text" id="reservation_phone" name="reservation_phone"
-                          class="form-control" required="">
-                      </div>
-                    </div>
-                    <div class="col-sm-6">
-                      <div class="form-group mb-30">
-                        <div class="styled-select">
-                          <select id="booking_service" name="booking_service" class="form-control" required="">
-                            <option value="">- Select Your Courses -</option>
-                            <option value="Accounting Technoloiges">CMA USA</option>
-                            <option value="Chemical Engineering">CMA INDIA</option>
-                            <option value="Computer Technologies">Enrollment Agent</option>
-                            <option value="Development Studies">BAT</option>
-                            <option value="Development Studies">CAT</option>
-                            <option value="Electrical & Electronic">ACCA IFRS</option>
-                          </select>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-sm-12">
-                      <div class="form-group mb-30">
-                        <textarea id="form_message" name="form_message" class="form-control required"
-                          placeholder="Enter Message" rows="5" aria-required="true"></textarea>
-                      </div>
-                    </div>
-                    <div class="col-sm-12">
-                      <div class="form-group mb-0 mt-0">
-                        <input name="form_botcheck" class="form-control" type="hidden" value="">
-                        <button type="submit"
-                          class="btn btn-colored btn-theme-colored btn-lg btn-flat border-left-theme-color-2-4px"
-                          data-loading-text="Please wait...">Submit Now</button>
-                      </div>
-                    </div>
-                  </div>
-                </form>
-                <!-- Reservation Form End-->
-
-                <!-- Reservation Form Validation Start-->
-                <script type="text/javascript">
-                  $("#reservation_form").validate({
-                    submitHandler: function (form) {
-                      var form_btn = $(form).find('button[type="submit"]');
-                      var form_result_div = '#form-result';
-                      $(form_result_div).remove();
-                      form_btn.before('<div id="form-result" class="alert alert-success" role="alert" style="display: none;"></div>');
-                      var form_btn_old_msg = form_btn.html();
-                      form_btn.html(form_btn.prop('disabled', true).data("loading-text"));
-                      $(form).ajaxSubmit({
-                        dataType: 'json',
-                        success: function (data) {
-                          if (data.status == 'true') {
-                            $(form).find('.form-control').val('');
-                          }
-                          form_btn.prop('disabled', false).html(form_btn_old_msg);
-                          $(form_result_div).html(data.message).fadeIn('slow');
-                          setTimeout(function () { $(form_result_div).fadeOut('slow') }, 6000);
-                        }
-                      });
-                    }
-                  });
-                </script>
-                <!-- Reservation Form Validation Start -->
-              </div>
-            </div>
-            <div class="col-md-5">
-              <img src="images/about/6.png" alt="">
-            </div>
-          </div>
-        </div>
-      </section>
-
-
     </div>
     <!-- end main-content -->
 
