--- a/cat.html
+++ b/cat.html
@@ -132,7 +132,7 @@
           <div id="maximage">
             <!-- <img src="images/bg/bg7.jpg" alt="" /> -->
             <!-- <img src="images/bg/bg5.jpg" alt="" /> -->
-            <img src="images/bg/bg1.jpg" alt="" />
+            <img src="images/mainimages/cources_page_5.jpg" alt="" />
           </div>
           <div class="fullscreen-controls"> <a class="img-prev"><i class="pe-7s-angle-left"></i></a> <a
               class="img-next"><i class="pe-7s-angle-right"></i></a> </div>
