--- a/cmausa.html
+++ b/cmausa.html
@@ -130,20 +130,16 @@
       <section id="home" class="divider parallax" data-bg-img="images/bg/bg1.jpg">
         <div class="maximage-slider">
           <div id="maximage">
-            <!-- <img src="images/bg/bg7.jpg" alt="" /> -->
-            <img src="images/bg/bg5.jpg" alt="" />
-            <!-- <img src="images/bg/bg1.jpg" alt="" /> -->
+            <img src="images/mainimages/cources_page_1.jpg" alt="" />
           </div>
-          <div class="fullscreen-controls"> <a class="img-prev"><i class="pe-7s-angle-left"></i></a> <a
-              class="img-next"><i class="pe-7s-angle-right"></i></a> </div>
         </div>
         <div class="display-table">
           <div class="display-table-cell">
             <div class="container pt-200 pb-200">
               <div class="row">
                 <div class="col-md-12">
-                  <h1 class="text-white text-uppercase font-60 font-weight-700 mb-0"> CMA <span
-                      class="text-theme-color-2">- USA </span></h1>
+                  <h1 class="text-white text-uppercase font-60 font-weight-700 mb-0"> CMA-<span
+                      class="text-theme-color-2">USA </span></h1>
                   <!-- <h2 class="title text-white ">Smart decisions start here !</h2> -->
                   <h2 class="title text-white ">Your CMA journey right here!</h2>
                   <p class="font-16 text-white">Institute of Management Accountant is the world-wide association <br />
@@ -442,16 +438,6 @@
                   </div>
                 </div>
               </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="divider parallax layer-overlay text-center" data-bg-img="images/bg/bg4.jpg">
-        <div class="container pt-120 pb-120">
-          <div class="row">
-            <div class="col-md-12 text-center">
-              <h3 class="text-white">Background Image With Parallax Divider</h3>
-              <h5 class="text-white">Content Here...</h5>
             </div>
           </div>
         </div>
