--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
                 <div class="video-popup">
                   <a href="https://www.youtube.com/watch?v=pW1uVUg5wXM" data-lightbox-gallery="youtube-video"
                     title="Video">
-                    <img alt="" src="images/about/5.jpg"
+                    <img alt="" src="images/mainimages/about_image_home.jpg"
                       class="img-responsive img-fullwidth mt-10 ml-30 ml-xs-0 ml-sm-0">
                   </a>
                 </div>
@@ -570,7 +570,7 @@
                 <div class="item">
                   <div class="project mb-30 border-2px">
                     <div class="thumb">
-                      <img class="img-fullwidth" alt="" src="images/project/p1.jpg" />
+                      <img class="img-fullwidth" alt="" src="images/mainimages/cources_image_3.avif" />
                       <div class="hover-link">
                         <a class="btn btn-flat btn-dark btn-theme-colored btn-md pull-left font-20"
                           href="cmausa.html"><span>click Explore</span>
@@ -607,7 +607,7 @@
                 <div class="item">
                   <div class="project mb-30 border-2px">
                     <div class="thumb">
-                      <img class="img-fullwidth" alt="" src="images/project/p2.jpg" />
+                      <img class="img-fullwidth" alt="" src="images/mainimages/cources_image_4.jpg" />
                       <div class="hover-link">
                         <a class="btn btn-flat btn-dark btn-theme-colored btn-md pull-left font-20"
                           href="cmaindia.html"><span>click to explore</span>
@@ -643,7 +643,7 @@
                 <div class="item">
                   <div class="project mb-30 border-2px">
                     <div class="thumb">
-                      <img class="img-fullwidth" alt="" src="images/project/p3.jpg" />
+                      <img class="img-fullwidth" alt="" src="images/mainimages/cources_image_6.jpg" />
                       <div class="hover-link">
                         <a class="btn btn-flat btn-dark btn-theme-colored btn-md pull-left font-20"
                           href="enrolledagent.html"><span>click
@@ -680,7 +680,7 @@
                 <div class="item">
                   <div class="project mb-30 border-2px">
                     <div class="thumb">
-                      <img class="img-fullwidth" alt="" src="images/project/p4.jpg" />
+                      <img class="img-fullwidth" alt="" src="images/mainimages/cources_image_1.jpg" />
                       <div class="hover-link">
                         <a class="btn btn-flat btn-dark btn-theme-colored btn-md pull-left font-20"
                           href="bat.html"><span>click
@@ -717,7 +717,7 @@
                 <div class="item">
                   <div class="project mb-30 border-2px">
                     <div class="thumb">
-                      <img class="img-fullwidth" alt="" src="images/project/p4.jpg" />
+                      <img class="img-fullwidth" alt="" src="images/mainimages/cources_image_2.jpg" />
                       <div class="hover-link">
                         <a class="btn btn-flat btn-dark btn-theme-colored btn-md pull-left font-20"
                           href="cat.html"><span>click
@@ -755,7 +755,7 @@
                 <div class="item">
                   <div class="project mb-30 border-2px">
                     <div class="thumb">
-                      <img class="img-fullwidth" alt="" src="images/project/p5.jpg" />
+                      <img class="img-fullwidth" alt="" src="images/mainimages/cources_image_5.jpg" />
                       <div class="hover-link">
                         <a class="btn btn-flat btn-dark btn-theme-colored btn-md pull-left font-20"
                           href="acca_ifrs.html"><span>click
