--- a/acca_ifrs.html
+++ b/acca_ifrs.html
@@ -213,7 +213,7 @@
                   <div class="col-xs-12 col-sm-6 col-md-6">
                     <div class="icon-box iconbox-theme-colored">
                       <a class="icon icon-bordered icon-circled icon-border-effect effect-circled" href="#">
-                        <i class="fa fa-diamond"></i>
+                        <i class="pe-7s-global"></i>
                       </a>
                       <h5 class="icon-box-title">Framework Understanding</h5>
                       <p class="text-gray"> Understand ACCA’s DipIFR, explaining the international professional and
@@ -223,7 +223,7 @@
                   <div class="col-xs-12 col-sm-6 col-md-6">
                     <div class="icon-box iconbox-theme-colored">
                       <a class="icon icon-bordered icon-circled icon-border-effect effect-circled" href="#">
-                        <i class="fa fa-diamond"></i>
+                        <i class="fa fa-line-chart"></i>
                       </a>
                       <h5 class="icon-box-title">Standards Application</h5>
                       <p class="text-gray"> Apply financial reporting standards to key elements of reports, ensuring
@@ -233,7 +233,7 @@
                   <div class="col-xs-12 col-sm-6 col-md-6">
                     <div class="icon-box iconbox-theme-colored">
                       <a class="icon icon-bordered icon-circled icon-border-effect effect-circled" href="#">
-                        <i class="fa fa-diamond"></i>
+                        <i class="fa fa-file"></i>
                       </a>
                       <h5 class="icon-box-title">Disclosure Proficiency</h5>
                       <p class="text-gray">Identify and apply disclosure requirements, enhancing clarity and precision
@@ -243,7 +243,7 @@
                   <div class="col-xs-12 col-sm-6 col-md-6">
                     <div class="icon-box iconbox-theme-colored">
                       <a class="icon icon-bordered icon-circled icon-border-effect effect-circled" href="#">
-                        <i class="fa fa-diamond"></i>
+                        <i class="fa fa-bar-chart"></i>
                       </a>
                       <h5 class="icon-box-title">Group Statements Preparation</h5>
                       <p class="text-gray"> Prepare comprehensive group financial statements, encompassing subsidiaries,
