--- a/about.html
+++ b/about.html
@@ -171,16 +171,21 @@
                 <a class="btn btn-colored btn-theme-colored btn-lg text-uppercase font-13 mt-0" href="contact.html">
                   Contact Us</a>
               </div>
-              <div class="col-sm-12 col-md-6 mt-0 wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.5s">
+              <div class="col-sm-12 col-md-6 mt-0 wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.5s"
+                style="position: relative;">
                 <div class="video-popup">
                   <a href="https://www.youtube.com/watch?v=pW1uVUg5wXM" data-lightbox-gallery="youtube-video"
                     title="Video">
                     <img alt="" src="images/mainimages/about_image_home.jpg"
                       class="img-responsive img-fullwidth mt-10 ml-30 ml-xs-0 ml-sm-0">
+                    <div
+                      style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: 2; font-size: 4em;">
+                      <!-- Use your preferred icon, e.g., Font Awesome -->
+                      <i class="fa fa-toggle-right " style="color: #e44178" ></i>
+                    </div>
                   </a>
                 </div>
-              </div>
-            </div>
+              </div>            </div>
           </div>
         </div>
       </section>
@@ -197,7 +202,7 @@
                     <div class="col-xs-12 col-sm-6 col-md-6">
                       <div class="icon-box p-0 mb-40 ">
                         <a href="#" class="icon bg-theme-colored pull-left sm-pull-none flip mr-10">
-                          <i class="pe-7s-scissors text-white"></i>
+                          <i class="fa fa-graduation-cap"></i>
                         </a>
                         <div class="icon-box-details ml-sm-0">
                           <h5 class="icon-box-title mt-15 letter-space-1 font-weight-600 mb-5">Personalized Guidance
@@ -210,7 +215,7 @@
                     <div class="col-xs-12 col-sm-6 col-md-6">
                       <div class="icon-box p-0 mb-40">
                         <a href="#" class="icon bg-theme-colored pull-left sm-pull-none flip mr-10">
-                          <i class="pe-7s-pen text-white"></i>
+                          <i class="fa fa-building-o"></i>
                         </a>
                         <div class="icon-box-details ml-sm-0">
                           <h5 class="icon-box-title mt-15 letter-space-1 font-weight-600 mb-5">ndustry-Relevant Training
@@ -223,7 +228,7 @@
                     <div class="col-xs-12 col-sm-6 col-md-6">
                       <div class="icon-box p-0 mb-40">
                         <a href="#" class="icon bg-theme-colored pull-left sm-pull-none flip mr-10">
-                          <i class="pe-7s-tools text-white"></i>
+                          <i class="fa fa-thumbs-o-up faa-vertical"></i>
                         </a>
                         <div class="icon-box-details ml-sm-0">
                           <h5 class="icon-box-title mt-15 letter-space-1 font-weight-600 mb-5">Strategic Partnerships
@@ -236,7 +241,7 @@
                     <div class="col-xs-12 col-sm-6 col-md-6">
                       <div class="icon-box p-0 mb-40">
                         <a href="#" class="icon bg-theme-colored pull-left sm-pull-none flip mr-10">
-                          <i class="pe-7s-phone text-white"></i>
+                          <i class="fa fa-star"></i>
                         </a>
                         <div class="icon-box-details ml-sm-0">
                           <h5 class="icon-box-title mt-15  letter-space-1 font-weight-600 mb-5">Mentorship Excellence
@@ -249,8 +254,7 @@
                     <div class="col-xs-12 col-sm-6 col-md-6">
                       <div class="icon-box p-0 mb-30">
                         <a href="#" class="icon bg-theme-colored pull-left sm-pull-none flip mr-10">
-                          <i class="pe-7s-vector text-white"></i>
-                        </a>
+                          <i class="fa fa-retweet"></i>                        </a>
                         <div class="icon-box-details ml-sm-0">
                           <h5 class="icon-box-title mt-15 letter-space-1 font-weight-600 mb-5">Holistic Skill
                             Development</h5>
@@ -262,7 +266,7 @@
                     <div class="col-xs-12 col-sm-6 col-md-6">
                       <div class="icon-box p-0 mb-30">
                         <a href="#" class="icon bg-theme-colored pull-left sm-pull-none flip mr-10">
-                          <i class="pe-7s-light text-white"></i>
+                          <i class="fa fa-line-chart"></i>
                         </a>
                         <div class="icon-box-details ml-sm-0">
                           <h5 class="icon-box-title mt-15  letter-space-1 font-weight-600 mb-5">Performance
