--- a/index.html
+++ b/index.html
@@ -534,12 +534,18 @@
                 <a class="btn btn-colored btn-theme-colored btn-lg text-uppercase font-13 mt-0" href="about.html">More
                   About Us</a>
               </div>
-              <div class="col-sm-12 col-md-6 mt-0 wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.5s">
+              <div class="col-sm-12 col-md-6 mt-0 wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.5s"
+                style="position: relative;">
                 <div class="video-popup">
                   <a href="https://www.youtube.com/watch?v=pW1uVUg5wXM" data-lightbox-gallery="youtube-video"
                     title="Video">
                     <img alt="" src="images/mainimages/about_image_home.jpg"
                       class="img-responsive img-fullwidth mt-10 ml-30 ml-xs-0 ml-sm-0">
+                    <div
+                      style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: 2; font-size: 4em;">
+                      <!-- Use your preferred icon, e.g., Font Awesome -->
+                      <i class="fa fa-toggle-right"  style="color: #e44178" ></i>
+                    </div>
                   </a>
                 </div>
               </div>
@@ -806,7 +812,7 @@
                   <div class="col-xs-12 col-sm-6 col-md-6">
                     <div class="icon-box p-15 mb-0 mb-sm-0 mt-sm-0">
                       <a class="icon pull-left sm-pull-none flip" href="#">
-                        <i class="fa fa-building text-theme-colored font-50"></i>
+                        <i class="fa fa-graduation-cap text-theme-colored font-50"></i>
                       </a>
                       <div class="ml-70 ml-sm-0">
                         <h4 class="icon-box-title mt-15 mb-5">Quality Education</h4>
@@ -839,7 +845,7 @@
                   <div class="col-xs-12 col-sm-6 col-md-6">
                     <div class="icon-box p-15 mb-30 mb-sm-0 mt-sm-0">
                       <a class="icon pull-left sm-pull-none flip" href="#">
-                        <i class="fa fa-money text-theme-colored font-50"></i>
+                        <i class="fa fa-thumbs-o-up faa-vertical text-theme-colored font-50"></i>
                       </a>
                       <div class="ml-70 ml-sm-0">
                         <h4 class="icon-box-title mt-15 mb-5">Career Preparation</h4>
@@ -1133,7 +1139,8 @@
                     <div id="accordion11" class="panel-collapse collapse in" role="tablist" aria-expanded="true">
                       <div class="panel-content">
                         <p>
-                          We offer a wide range of courses, including CMA-US, CMA-IND, Enrollment Agent, BAT, CAT, ACCA-IFRS . designed to meet
+                          We offer a wide range of courses, including CMA-US, CMA-IND, Enrollment Agent, BAT, CAT,
+                          ACCA-IFRS . designed to meet
                           various accounting needs.
                         </p>
                       </div>
