--- a/cmausa.html
+++ b/cmausa.html
@@ -179,19 +179,18 @@
                   positioning yoursеlf for succеss in divеrsе global opportunities. With a wеll-rеgardеd rеputation, CMA
                   USA cеrtification sеts you apart in thе compеtitivе job markеt, еspеcially in Kеrala and major Indian
                   cities, offering high-profile rolеs in managеmеnt and financial accounting."</p>
-                <br /><br />
+                <br><br>
                 <img src="images/mainimages/CMA_USA_TREE.jpg" alt="">
-                <br /><br /><br />
+                <br><br><br>
                 <img src="images/mainimages/CMA_USA_EXAM_SCEDULE.png" alt="">
-                <br /><br />
+                <br><br><br><br>
                 <img src="images/mainimages/CMA_pappers.png" alt="">
-                <br /> <br> <br>
+                <br> <br> <br><br><br>
                 <img src="images/mainimages/CMA_USA_INDUSTRIES.png" alt="">
-                <br /><br /><br />
-                <h2 class="title text-center">Why Prospire</h2>
-                <br />
-                <img src="images/mainimages/Why_Prospire.png" alt="">
-                <br />
+                <br><br><br><br>
+                <br>
+                <img src="images/mainimages/Why_Prospire.jpg" alt="">
+                <br><br><br><br>
                 <img src="images/mainimages/CMA-USA-CAREEROPPERTUN.jpg" alt="">
               </div>
             </div>
