--- a/cmaindia.html
+++ b/cmaindia.html
@@ -183,10 +183,9 @@
                       <span> </em>"</h5>
                 <br><br><br>
                 <img class="container" src="images/mainimages/cma_india_duration_map.png" alt="">
-                <br><br><br>
-                <h3 class="text-theme-colored">SYLLABUS</h3>
                 <br><br>
-                <img class="container" src="images/mainimages/cma_india_stages.png" alt="">
+                <br><br>                                                                                                                                                                                                                                                                                                                                                                                       
+                <img class="container" src="images/mainimages/cma_india_stages.jpg" alt="">
               </div>
             </div>
             <div class="col-sm-12 col-md-4">
